--- a/styles.css
+++ b/styles.css
@@ -6,6 +6,13 @@
   text-align: center;
 }
 
+.buttons {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: row;
+}
+
 .die {
   display: flex;
   justify-content: center;
@@ -19,6 +26,10 @@
     justify-content: center;
     align-items: center;
     flex-direction: row;
+}
+
+.dice:active {
+  transform: scale(90%);
 }
 
 body {
@@ -82,6 +93,10 @@ button:hover {
 button:active {
   transform: translateY(3px);
   box-shadow: -7px 20px 20px -19px rgba(0, 0, 0, .7), 0 5px 5px 0 rgba(0, 0, 0, .3);
+}
+
+button:disabled {
+  opacity: .5;
 }
 
 .pulsate {
